# snowfallio

./: Cargo.toml  LICENSE-THIRD-PARTY
examples/: Cargo.toml  accept.rs  builder.rs  channel.rs  echo.rs  h2_client.rs  h2_server.rs  hyper_client.rs  hyper_server.rs  join.rs  macro.rs  proxy.rs  tcp_legacy.rs  tcp_uring.rs  timer.rs  timer_select.rs  uds.rs
examples/tokio-io-compat/: Cargo.toml
examples/tokio-io-compat/src/: main.rs
snowfallio/: Cargo.toml
snowfallio-compat/: Cargo.toml  README.md
snowfallio-compat/src/: box_future.rs  buf.rs  lib.rs  safe_wrapper.rs  tcp_unsafe.rs
snowfallio-macros/: Cargo.toml
snowfallio-macros/src/: entry.rs  lib.rs
snowfallio/src/: blocking.rs  builder.rs  lib.rs  runtime.rs
snowfallio/src/buf/: io_buf.rs  io_vec_buf.rs  raw_buf.rs  slice.rs  vec_wrapper.rs
snowfallio/src/driver/: mod.rs  op.rs  shared_fd.rs  util.rs
snowfallio/src/driver/op/: accept.rs  close.rs  connect.rs  fsync.rs  open.rs  poll.rs  read.rs  recv.rs  send.rs  splice.rs  write.rs
snowfallio/src/driver/uring/: mod.rs  waker.rs
snowfallio/src/fs/: file.rs  open_options.rs
snowfallio/src/io/: mod.rs
snowfallio/src/io/util/: copy.rs  mod.rs
snowfallio/src/macros/: join.rs  pin.rs  select.rs  try_join.rs
snowfallio/src/net/: mod.rs  udp.rs
snowfallio/src/time/: instant.rs  interval.rs  mod.rs
snowfallio/src/utils/: uring_detect.rs
snowfallio/tests/: fs_file.rs  tcp_accept.rs  tcp_connect.rs  tcp_echo.rs  tcp_into_split.rs  tcp_split.rs  udp.rs  uds_cred.rs  uds_split.rs  uds_stream.rs  zero_copy.rs
(+9 files in other folders)
