[package]
authors = ["Jordan isaacs <mail@jdisaacs.com>"]
categories = ["asynchronous"]
description = "Snowfallio proc macros."
edition = "2021"
keywords = ["runtime", "iouring", "async"]
license = "MIT/Apache-2.0"
name = "snowfallio-macros"
readme = "README.md"
repository = "https://github.com/snowfallio/snowfallio"
version = "0.0.3"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1"
syn = { version = "1.0", features = ["full"] }
